--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,35 @@
-version: "3.8"
 services:
-  # Application
   app:
-    container_name: auth-app
+    container_name: laravel-docker-postgres-app
     build:
-      context: ./docker/services/app
-      dockerfile: Dockerfile
-    image: auth-service-app
+      context: .
+      target: php
     volumes:
-      - .:/var/www
-    networks:
-      - kong-net
-  # Web Server
-  web:
-    image: nginx:1.21
-    container_name: auth-web
-    # build:
-    #   context: ./docker/services/web
-    #   dockerfile: web.dockerfile
-    volumes:
-      - .:/var/www
-      - ./docker/services/web/vhost.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/html
     ports:
-      - "${APP_PORT:-80}:80"
+      - 8000:8000
     networks:
-      - kong-net
-  pgsql:
-    container_name: auth-db
-    image: 'postgres:15'
-    ports:
-      - '${FORWARD_DB_PORT:-5432}:5432'
+      - laravel-docker-postgres-app
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    container_name: laravel-docker-postgres-db
+    restart: always
     environment:
-      PGPASSWORD: '${DB_PASSWORD:-secret}'
-      POSTGRES_DB: '${DB_DATABASE}'
-      POSTGRES_USER: '${DB_USERNAME}'
-      POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+      POSTGRES_DB: db_sale
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
     volumes:
-      - 'auth-db:/var/lib/postgresql/data'
+      - db_data:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
     networks:
-      - kong-net
-    healthcheck:
-      test:
-          - CMD
-          - pg_isready
-          - '-q'
-          - '-d'
-          - '${DB_DATABASE}'
-          - '-U'
-          - '${DB_USERNAME}'
-      retries: 3
-      timeout: 5s
+      - laravel-docker-postgres-app
+
 networks:
-  kong-net:
-    driver: bridge
+  laravel-docker-postgres-app:
+
 volumes:
-  auth-db:
-    driver: local
+  db_data:
